--- a/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Neighbour_char_not_same/Max_Length_of_Concatenated_Str_with_Unique_Characters.adoc
+++ b/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Neighbour_char_not_same/Max_Length_of_Concatenated_Str_with_Unique_Characters.adoc
@@ -1,11 +1,12 @@
-**Maximum Length of a Concatenated String with Unique Characters**
-- [Approach-1. Using vector](#a1)
+:toc:
+:toclevels: 6
 
-### [1239. Maximum Length of a Concatenated String with Unique Characters](https://leetcode.com/problems/maximum-length-of-a-concatenated-string-with-unique-characters/description/)
-- You are given an array of strings arr. A string s is formed by the concatenation of a subsequence of arr that has unique characters.
-- Return the maximum possible length of s.
-- A subsequence is an array that can be derived from another array by deleting some or no elements without changing the order of the remaining elements.
-- **Condition1:** skip all strings having repetative characters
+== link:https://leetcode.com/problems/maximum-length-of-a-concatenated-string-with-unique-characters/description/[1239. Maximum Length of a Concatenated String with Unique Characters]
+You are given an array of strings arr. A string s is formed by the concatenation of a subsequence of arr that has unique characters.
+
+Return the maximum possible length of s.
+
+A subsequence is an array that can be derived from another array by deleting some or no elements without changing the order of the remaining elements.
 ```c
 Example 1:
 Input: arr = ["un","iq","ue"]
@@ -25,29 +26,31 @@ Output: 2
 Explanation: skip "aa" string since it has repetative characters
 ```
 
-<a name=a1></a>
-### Approach-1. Using vector
-#### Logic
-- _1._ Take a vector in which we will note all valid combinations
-- _2._ Create word which need to be placed into vector by combining input word and string.
-- _3._ Check does the created word have any repetative characters?
+== Approach-1. Using vector
+=== Logic
+1. Take a vector in which we will note all valid combinations
+2. Create word which need to be placed into vector by combining input word and string.
+3. Check does the created word have any repetative characters?
 ```c
   uniq  //No repetative character
   unue  //Have repetative character "u"
 ```
-#### Complexity
-- **Time:** 
-- **Space:**
-#### Code
+
+=== Complexity
+* Time: O(mn)
+* Space: O(m)+O(n)
+
+=== Code
+==== CPP
 ```cpp
 class Solution {
 public:
-                  //["un","iq","ue"]
+    //["un","iq","ue"]
     int maxLength(vector<string>& arr) {
     
         // 1. Vector in which we will note all valid combinations
         // {"uniq", "ique"]
-        vector<string> output = {""};
+        vector<string> output = {""};      //size=1
 		
         int maxLen = 0;
         for (string word : arr) {
