--- a/DS_Questions/Data_Structures/Trees/BinaryTree/Find_in_bt/Pseudo-Palindromic_Paths_in_a_Binary_Tree.adoc
+++ b/DS_Questions/Data_Structures/Trees/BinaryTree/Find_in_bt/Pseudo-Palindromic_Paths_in_a_Binary_Tree.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 5
 
-== link:[https://leetcode.com/problems/pseudo-palindromic-paths-in-a-binary-tree/]1457. Pseudo-Palindromic Paths in a Binary Tree
+== link:https://leetcode.com/problems/pseudo-palindromic-paths-in-a-binary-tree/[1457. Pseudo-Palindromic Paths in a Binary Tree]
 Given a binary tree where node values are digits from 1 to 9. A path in the binary tree is said to be pseudo-palindromic if at least one permutation of the node values in the path is a palindrome.
 
 Return the number of pseudo-palindromic paths going from the root node to leaf nodes.
