--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/Out_of_Boundary_Paths.adoc
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/Out_of_Boundary_Paths.adoc
@@ -20,7 +20,7 @@ Output: 6
 === Code
 ==== CPP
 ```cpp
-vector<int> rowd = {-1,0,0,1};
+vector<int> rowd = {-1,0,0,1};    //4 directions from a cell
 vector<int> cold = {0,-1,1,0};
 class Solution {
     int count;
